// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ScrollTo Component. Test HOC. Should render the functional children. 1`] = `
<WithScrollToHOC(test)>
  <test
    scroll={[Function]}
  >
    <div>
      test
    </div>
  </test>
</WithScrollToHOC(test)>
`;

exports[`Test ScrollTo Component. Test render prop. Should render nothing nothing on undefined. 1`] = `""`;

exports[`Test ScrollTo Component. Test render prop. Should render the functional children. 1`] = `
<div>
  test
</div>
`;
